--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -8,14 +8,12 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji",
-    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --font-serif: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
-  --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas,
-    "Liberation Mono", "Courier New", monospace;
+  --text-primary: #171717;
   --font-poppins: Poppins, sans-serif;
   --font-inter: Inter, sans-serif;
-  --font-roboto: Roboto, sans-serif;
+  --font-libre: "Libre Baskerville";
+  --font-pragati: "Pragati Narrow";
+  --font-ruhl: "Frank Ruhl Libre";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,4 +27,26 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.see-more-btn::after {
+  content: "";
+  position: absolute;
+  width: 0;
+  height: 0.5px;
+  bottom: -2px;
+  left: 0;
+  background-color: #171717;
+  transition: width 0.3s ease-in-out;
+}
+
+.see-more-btn:hover::after {
+  width: 100%;
+}
+
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+.scrollbar-hidden {
+  scrollbar-width: none;
 }
