--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,7 @@
 @import "tailwindcss";
 
+@custom-variant dark (&:where(.dark, .dark *));
+
 :root {
   --background: #ffffff;
   --foreground: #171717;
@@ -27,21 +29,6 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
-}
-
-.see-more-btn::after {
-  content: "";
-  position: absolute;
-  width: 0;
-  height: 0.5px;
-  bottom: -2px;
-  left: 0;
-  background-color: #171717;
-  transition: width 0.3s ease-in-out;
-}
-
-.see-more-btn:hover::after {
-  width: 100%;
 }
 
 .scrollbar-hidden::-webkit-scrollbar {
