--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -37,3 +37,38 @@ body {
 .scrollbar-hidden {
   scrollbar-width: none;
 }
+
+.animate-wiggle {
+  animation: wiggle 1s ease-in-out infinite;
+}
+
+.animate-glow {
+  animation: glow 5s ease-in-out infinite;
+}
+
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 4px #bebdbd;
+  }
+  100% {
+    box-shadow: 0 0 8px #e5e7eb, 0 0 20px #e5e7eb;
+  }
+}
+
+@keyframes wiggle {
+  0% {
+    transform: rotate(0deg);
+  }
+  25% {
+    transform: rotate(10deg);
+  }
+  50% {
+    transform: rotate(0deg);
+  }
+  75% {
+    transform: rotate(-10deg);
+  }
+  100% {
+    transform: rotate(0deg);
+  }
+}
