refactor: update carousel from scratch to swiper js

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -72,3 +72,12 @@ body {
     transform: rotate(0deg);
   }
 }
+
+.hide-scrollbar {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
